# PYDecoder

./: .gitignore  N1MM_to_AG.sln  README.md  TI7W-Band-Decoder.py  config.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml
pydecoder/: __init__.py  config.py
pydecoder/core/: __init__.py  decoder_engine.py
pydecoder/devices/: __init__.py  ftdi.py
pydecoder/networking/: __init__.py  antenna_genius.py  n1mm.py
pydecoder/ui/: main_window.py
pydecoder/utils/: band_helpers.py
tests/: __init__.py  conftest.py  test_antenna_genius.py  test_band_helpers.py  test_config.py  test_decoder_engine.py  test_ftdi_device_manager.py  test_n1mm_listener.py
