[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydecoder"
dynamic = ["version"]
description = "UDP Broadcast to AntennaGenius and FTDI BCD Translator"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "W9KKN"}
]
dependencies = [
    "libusb-package>=1.0.26.1",
    "libusb1>=3.3.0",
    "pyftdi>=0.54.0",
    "pyusb>=1.3.1",
    "xmltodict>=0.13.0",
]

[project.optional-dependencies]
windows = [
    "ftd2xx>=1.3.1",
]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pyinstaller>=5.6.2",
]

[tool.setuptools]
packages = ["pydecoder"]

[tool.setuptools.dynamic]
version = {attr = "pydecoder.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[project.scripts]
pydecoder = "main:main"
